# spacebot

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  METRICS.md  README.md  TODO  docker-entrypoint.sh  flake.nix  fly.staging.toml  justfile
.githooks/: pre-commit
.github/workflows/: interface-ci.yml  release.yml
docs/: heartbeats.md  metrics.md  roadmap.md
docs/content/docs/: index.mdx
docs/content/docs/(configuration)/: config.mdx  sandbox.mdx
docs/content/docs/(core)/: agents.mdx  architecture.mdx  cortex.mdx  meta.json
docs/content/docs/(deployment)/: meta.json  metrics.mdx
docs/design-docs/: link-channels-task-delegation.md  multi-agent-communication-graph.md  projects.md  sandbox-hardening.md  sandbox.md  secret-store.md  tool-nudging.md
interface/: DRY_VIOLATIONS.md  biome.json  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
interface/opencode-embed-src/: embed-entry.tsx  embed.tsx  index-embed.html  spacebot-theme.json  vite.config.embed.ts
interface/src/: main.tsx  router.tsx
interface/src/api/: client.ts
interface/src/components/: AgentTabs.tsx  ChannelCard.tsx  ChannelEditModal.tsx  ChannelSettingCard.tsx  ConnectionBanner.tsx  CortexChatPanel.tsx  CreateAgentDialog.tsx  DeleteAgentDialog.tsx  Markdown.tsx  MemoryGraph.tsx  ModelSelect.tsx  PromptInspectModal.tsx  Sidebar.tsx  TagInput.tsx  ToolCall.tsx  TopologyGraph.tsx  UpdateBanner.tsx  WebChatPanel.tsx
interface/src/hooks/: useAgentOrder.ts  useChannelLiveState.ts  useCortexChat.ts  useEventSource.ts  useLiveContext.tsx  useTheme.ts  useWebChat.ts
interface/src/lib/: format.ts  platformIcons.tsx  providerIcons.tsx
interface/src/routes/: AgentChannels.tsx  AgentConfig.tsx  AgentCortex.tsx  AgentCron.tsx  AgentDetail.tsx  AgentIngest.tsx  AgentMemories.tsx  AgentProjects.tsx  AgentSkills.tsx  AgentTasks.tsx  AgentWorkers.tsx  ChannelDetail.tsx  Overview.tsx  Settings.tsx
interface/src/ui/: Badge.tsx  Banner.tsx  Button.tsx  Card.tsx  Checkbox.tsx  Dialog.tsx  Divider.tsx  Dropdown.tsx  FilterButton.tsx  Input.tsx  Loader.tsx  NumberStepper.tsx  Popover.tsx  ProgressBar.tsx  RadioGroup.tsx  Select.tsx  SettingSidebarButton.tsx  Slider.tsx  Tabs.tsx  Toggle.tsx  ToggleGroup.tsx  Tooltip.tsx  Typography.tsx  index.ts  utils.tsx
interface/src/ui/forms/: Form.tsx  (+7 more)
migrations/: 20260213000003_process_runs.sql  20260219000001_tasks.sql  20260305000002_worker_directory.sql  20260306000003_projects.sql  20260306000004_worker_project_link.sql  20260306000005_project_disk_usage.sql  20260306000006_project_repo_current_branch.sql
nix/: default.nix  module.nix
prompts/: BRANCH.md  CHANNEL.md  COMPACTOR.md  CORTEX.md  WORKER.md
prompts/en/: branch.md.j2  channel.md.j2  cortex_chat.md.j2  worker.md.j2
prompts/en/fragments/: link_context.md.j2  org_context.md.j2  projects_context.md.j2  skills_channel.md.j2  skills_worker.md.j2  worker_capabilities.md.j2
prompts/en/tools/: branch_description.md.j2  channel_recall_description.md.j2  conclude_link_description.md.j2  file_edit_description.md.j2  file_list_description.md.j2  file_read_description.md.j2  file_write_description.md.j2  project_manage_description.md.j2  send_agent_message_description.md.j2  shell_description.md.j2  spawn_worker_description.md.j2  task_create_description.md.j2  task_list_description.md.j2  task_update_description.md.j2
scripts/: build-opencode-embed.sh  install-git-hooks.sh
src/: acp.rs  agent.rs  api.rs  config.rs  conversation.rs  daemon.rs  db.rs  error.rs  heartbeat.rs  hooks.rs  identity.rs  lib.rs  links.rs  llm.rs  main.rs  mcp.rs  memory.rs  messaging.rs  openai_auth.rs  projects.rs  sandbox.rs  secrets.rs  self_awareness.rs  settings.rs  skills.rs  stt.rs  tasks.rs  tools.rs
src/acp/: client.rs  process.rs  types.rs  worker.rs
src/agent/: branch.rs  channel.rs  channel_dispatch.rs  channel_history.rs  channel_prompt.rs  compactor.rs  cortex.rs  cortex_chat.rs  ingestion.rs  prompt_snapshot.rs  status.rs  worker.rs
src/api/: agents.rs  bindings.rs  channels.rs  config.rs  cortex.rs  cron.rs  ingest.rs  links.rs  memories.rs  messaging.rs  models.rs  opencode_proxy.rs  projects.rs  providers.rs  server.rs  settings.rs  skills.rs  state.rs  system.rs  tasks.rs  webchat.rs  workers.rs
src/config/: load.rs  runtime.rs  toml_schema.rs  types.rs
src/conversation/: channels.rs  context.rs  history.rs  worker_transcript.rs
src/cron/: scheduler.rs  store.rs
src/heartbeat/: scheduler.rs  store.rs
src/hooks/: cortex.rs  loop_guard.rs  spacebot.rs
src/identity/: files.rs
src/links/: types.rs
src/llm/: manager.rs  model.rs  pricing.rs  providers.rs  routing.rs
src/llm/anthropic/: auth.rs  params.rs
src/memory/: embedding.rs  lance.rs  maintenance.rs  search.rs  store.rs  types.rs
src/messaging/: discord.rs  email.rs  manager.rs  mattermost.rs  slack.rs  telegram.rs  traits.rs  twitch.rs  webchat.rs  webhook.rs
src/opencode/: types.rs  worker.rs
src/projects/: git.rs  store.rs
src/prompts/: engine.rs  text.rs
src/secrets/: store.rs
src/settings/: store.rs
src/tasks/: store.rs
src/telemetry/: registry.rs  server.rs
src/tools/: branch_tool.rs  browser.rs  cancel.rs  channel_recall.rs  conclude_link.rs  exec.rs  file.rs  heartbeat.rs  mcp.rs  memory_delete.rs  memory_recall.rs  memory_save.rs  project_manage.rs  read_skill.rs  reply.rs  route.rs  send_agent_message.rs  send_message_to_another_channel.rs  set_status.rs  shell.rs  spawn_worker.rs  task_create.rs  task_list.rs  task_update.rs
tests/: bulletin.rs  context_dump.rs  tool_nudge.rs
(+13 files in other folders)
