[package]
name = "spacebot"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core async runtime
tokio = { version = "1.44", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# LLM / Rig framework
rig = { version = "0.30.0", package = "rig-core", features = ["derive"] }

# HTTP clients for LLM providers
reqwest = { version = "0.12", features = ["json"] }

# Databases
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono", "uuid"] }
lancedb = "0.18"
redb = "2.4"

# Vector / embedding operations
arrow = "54"
fastembed = "4"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
dirs = "6.0"
config = "0.15"
toml = "0.8"

# Cryptography (for secrets)
aes-gcm = "0.10"
rand = "0.9"

# UUID generation
uuid = { version = "1.15", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Regular expressions (for leak detection)
regex = "1.11"

# Async utilities
futures = "0.3"
pin-project = "1"

# Schema validation
schemars = "0.8"

# Command line (for main.rs)
clap = { version = "4.5", features = ["derive"] }

# Indoc for test fixtures
indoc = "2"

[lints.clippy]
dbg_macro = "forbid"
todo = "forbid"
unimplemented = "forbid"

[dev-dependencies]
tokio-test = "0.4"
