[package]
name = "spacebot"
version = "0.1.12"
edition = "2024"
default-run = "spacebot"

[dependencies]
# Core async runtime
tokio = { version = "1.44", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# LLM / Rig framework
rig = { version = "0.30.0", package = "rig-core", features = ["derive"] }

# HTTP clients for LLM providers
reqwest = { version = "0.12", features = ["json", "stream"] }

# Databases
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono", "uuid"] }
lancedb = "0.26"
lance-index = "2.0"
redb = "2.4"

# Vector / embedding operations
fastembed = "4"

# Encoding
base64 = "0.22"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# OpenTelemetry
opentelemetry = "0.29"
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio", "experimental_trace_batch_span_processor_with_async_runtime"] }
opentelemetry-otlp = { version = "0.29", default-features = false, features = ["http-proto", "reqwest-client"] }
opentelemetry-semantic-conventions = "0.29"
tracing-opentelemetry = "0.30"

# Configuration
dirs = "6.0"
config = "0.15"
toml = "0.8"
toml_edit = "0.22"
arc-swap = "1"
notify = "7"

# Cryptography (for secrets)
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.9"

# UUID generation
uuid = { version = "1.15", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Regular expressions (for leak detection)
regex = "1.11"

# Async utilities
futures = "0.3"
pin-project = "1"

# Schema validation
schemars = "0.8"

# Command line (for main.rs)
clap = { version = "4.5", features = ["derive"] }
dialoguer = { version = "0.11", features = ["password"] }

# Daemonization
daemonize = "0.5"
libc = "0.2"
ignore = "0.4"

# Discord
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "cache", "chrono", "rustls_backend"] }
async-trait = "0.1"

# Slack
slack-morphism = { version = "2.17", features = ["hyper"] }

# TLS (shared crypto backend for slack-morphism, reqwest, teloxide)
rustls = { version = "0.23", default-features = false, features = ["ring"] }

# Telegram
teloxide = { version = "0.17", default-features = false, features = ["rustls"] }

# Twitch
twitch-irc = { version = "5.0", default-features = false, features = ["transport-tcp-rustls-webpki-roots"] }

# Stream utilities
tokio-stream = "0.1"

# HTTP server for control UI
axum = { version = "0.8", features = ["multipart"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"
async-stream = "0.3"

# Indoc for test fixtures
indoc = "2"
arrow-array = "57.3.0"
arrow-schema = "57.3.0"

# Browser automation
chromiumoxide = { version = "0.8", features = ["tokio-runtime"], default-features = false }
chromiumoxide_cdp = "0.8"

# Templating for prompts
minijinja = "2.8"

# Docker API client (for self-update via Docker socket)
bollard = "0.18"

# Semver parsing (for update version comparison)
semver = "1"

# Skill installation
zip = "2"
tempfile = "3"

# Prometheus metrics (optional, behind "metrics" feature)
prometheus = { version = "0.13", optional = true }
whisper-rs = { version = "0.15", optional = true, features = ["vulkan"] }
hf-hub = { version = "0.5", optional = true }
symphonia = { version = "0.5", features = ["mp3", "aac", "flac", "ogg", "wav", "isomp4"], optional = true }
ogg = { version = "0.9", optional = true }
opus = { version = "0.3", optional = true }
pdf-extract = "0.10.0"
open = "5.3.3"
urlencoding = "2.1.3"

[features]
stt-whisper = ["dep:whisper-rs", "dep:hf-hub", "dep:symphonia", "dep:ogg", "dep:opus"]
metrics = ["dep:prometheus"]

[lints.clippy]
dbg_macro = "forbid"
todo = "forbid"
unimplemented = "forbid"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = "thin"
strip = true
